--- a/prj.conf
+++ b/prj.conf
@@ -32,13 +32,17 @@ CONFIG_USB_DEVICE_LOG_LEVEL_ERR=y
 
 #UART config
 #CONFIG_SERIAL=y
+#CONFIG_SERIAL_HAS_DRIVER=
 #CONFIG_UART_INTERRUPT_DRIVEN=y
 
 #GPIO config
 #CONFIG_GPIO=y
 
+#Debug Features 
+CONFIG_DEBUG_OPTIMIZATIONS=y
+CONFIG_DEBUG_THREAD_INFO=y
 
-
+CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=n
 CONFIG_RTT_CONSOLE=y
 CONFIG_USE_SEGGER_RTT=y
