rtt debug config

--- a/prj.conf
+++ b/prj.conf
@@ -10,9 +10,9 @@ CONFIG_NRFX_TIMER0=y
 CONFIG_NRFX_TIMER1=y
 
 # USB config
-#CONFIG_USB_DEVICE_STACK=y
-#CONFIG_USB_DEVICE_MANUFACTURER="Bitcraze AB"
-#CONFIG_USB_DEVICE_PRODUCT="Crazyradio Reciever"
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_USB_DEVICE_MANUFACTURER="Bitcraze AB"
+CONFIG_USB_DEVICE_PRODUCT="Crazyradio Reciever"
 
 # RPC libraries
 #CONFIG_TINYCBOR=y
@@ -25,6 +25,12 @@ CONFIG_LOG_DEFAULT_LEVEL=1
 CONFIG_LOG_MAX_LEVEL=4
 CONFIG_USB_DRIVER_LOG_LEVEL_ERR=y
 CONFIG_USB_DEVICE_LOG_LEVEL_ERR=y
+# new rtt config
+CONFIG_LOG_BACKEND_RTT=y
+CONFIG_SEGGER_RTT_BUFFER_SIZE_UP=1024 
+# Up-buffer size (host -> target)
+CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=16    
+# Down-buffer size (target -> host)
 
 # RNG config
 #CONFIG_ENTROPY_GENERATOR=y
@@ -49,4 +55,4 @@ CONFIG_USE_SEGGER_RTT=y
 
 #CONFIG_TARGET_UF2_BOOTLOADER=y
 
-#CONFIG_ADC=y
+CONFIG_ADC=y
